@@ -1,5 +1,10 @@
 2012-02-22 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/Makefile.am: Store export-format image in dedicated dir.
+
+	* src/core/na-exporter.c (na_exporter_get_ask_option): Updated
+	accordingly.
+
 	* configure.ac: Check for ICE library (fix #670434).
 
 	* docs/reference/na-compiling.xml: Updated accordingly.
